test/visibility/private/iters/useOtherSibling.good
useOtherSibling.chpl:13: In function 'main':
useOtherSibling.chpl:14: warning: A visible 'foo' is an inaccessible private symbol, defined at:
 useOtherSibling.chpl:2
useOtherSibling.chpl:14: error: unresolved call 'foo(6)'
